Fix item overlap

--- a/src/App.css
+++ b/src/App.css
@@ -220,6 +220,7 @@ select {
     transform: translateX(-50%);
     transition: all 0.3s ease;
     z-index: 1;
+    pointer-events: none;
 }
 
 .barter-icon-1x-1x {
